# zoid

./: .gitignore  LICENSE  Setup.hs  default.nix  release.nix  shell.nix  stack.yaml  zoid.cabal
nix/: clash-ghc.nix  clash-lib.nix  clash-prelude.nix
src/: Config.hs  Decode.hs  ISA.hs  InstructionSetArchitecture.hs  Instructions.hs  Main.hs  Opcodes.hs  Registers.hs  Types.hs  Zoid.hs
src/Instructions/: Base.hs  Common.hs
src/Registers/: Floating.hs  General.hs
