name:                zoid
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jkopanski/zoid#readme
license:             BSD3
license-file:        LICENSE
author:              Jakub Kopański
maintainer:          jkopansk@gmail.com
copyright:           2016 Jakub Kopański
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dir:       src
  exposed-modules:     Instructions
                     , Opcodes
                     , Registers
  other-extensions:    OverloadedStrings
  build-depends:
      base          >= 4.7  && < 5
    , clash-prelude >= 0.11 && < 0.12
  default-language:    Haskell2010

-- executable zoid
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5,
--                        clash-ghc,
--                        clash-lib
